# hello-algo

./: .gitignore  pyproject.toml
05-stack-queue/01-stack/: arry_stack.py  linkedlist_stack.py
05-stack-queue/02-queue/: arry_queue.py  linkedlist_queue.py
05-stack-queue/03-deque/: arry_deque.py  linkedlist_deque.py
modules/: __init__.py  list_node.py
