[tool.poetry]
name = "hello-algo"
version = "0.1.0"
description = ""
authors = ["vanhelsingyyy <vanhelyy@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_algo"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
